changed font sizing to rem based via $ea-spacing-unit and fixed underhang with display:block on the svg tag

--- a/src/sass/components/_icon.scss
+++ b/src/sass/components/_icon.scss
@@ -1,8 +1,7 @@
-$icon-size: 24px;
-
 .c-icon {
-  width: $icon-size;
-  height: $icon-size;
+  display: block;
+  width: $ea-spacing-unit;
+  height: $ea-spacing-unit;
 
   color: currentColor;
 }
